# textalloc

./: LICENSE  README.md  demo.ipynb  pyproject.toml  setup.py
src/textalloc/: __init__.py  candidates.py  non_overlapping_boxes.py  overlap_functions.py
textalloc/: __init__.py  candidates.py  find_non_overlapping.py  non_overlapping_boxes.py  overlap_functions.py
