[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "textalloc"
version = "0.0.3"
authors = [
  { name="Christoffer Kjellson", email="c.kjellson@gmail.com" },
]
license = {text = "MIT License"}
description = "Efficient Text Allocation in matplotlib using NumPy Broadcasting"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tqdm",
    "numpy",
    "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com/ckjellson/textalloc"
"Bug Tracker" = "https://github.com/ckjellson/textalloc/issues"