[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "textalloc"
version = "1.1.0"
authors = [
  { name="Christoffer Kjellson", email="c.kjellson@gmail.com" },
]
license = {text = "MIT License"}
description = "Efficient Text Allocation in matplotlib using NumPy Broadcasting"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'tqdm; python_version>"3.6"',
    'numpy',
    'matplotlib',
]

[project.urls]
"Homepage" = "https://github.com/ckjellson/textalloc"
"Bug Tracker" = "https://github.com/ckjellson/textalloc/issues"